# leaftracker-gtk

./: .gitignore  Makefile  README.md  build.sh  meson.build  org.bswa.Leaftracker.json  org.bswa.jhanarato.Leaftracker.json  pypi-dependencies.json  pyproject.toml  python3-requirements.json  requirements.txt  test.sh
data/: meson.build  org.bswa.Leaftracker.appdata.xml.in  org.bswa.Leaftracker.desktop.in  org.bswa.Leaftracker.gschema.xml  org.bswa.jhanarato.Leaftracker.appdata.xml.in  org.bswa.jhanarato.Leaftracker.desktop.in  org.bswa.jhanarato.Leaftracker.gschema.xml
data/icons/: meson.build
features/: editing_species.feature  meson.build
features/steps/: editing_species.py  meson.build  tutorial.py
po/: POTFILES  meson.build
src/: backend.py  dialog_test.py  dialog_test.ui  leaftracker-gtk.in  leaftracker_gtk.gresource.xml  main.py  main_window.py  meson.build  navigation_example.py  species.py  testable.py  window_test.py  window_test.ui
src/pygui/: list_maker.py  main.py  main_window.py  meson.build  species.py  species_details_page.py  species_list_page.py  species_model.py  string_list_maker.py  validated_entry_row.py
src/ui/: leaftracker.cmb  main_window.ui  navigation_example.ui  previous_names.ui  previous_scientific_names.ui  removable_row.ui  species_details.ui  species_details_page.ui  species_list.ui  species_list_page.ui  string_list_maker.ui  validated_entry_row.ui
tests/: conftest.py  meson.build  pytest.ini  test_example.py  test_learn_actions.py  test_learn_models.py  test_learn_properties.py  test_learn_signals.py  test_learn_templates.py  test_list_maker.py  test_main.py  test_main_window.py  test_properties_and_signals.py  test_species.py  test_species_details_page.py  test_species_list_page.py  test_species_model.py  test_string_list_maker.py  test_validated_entry_row.py
